# cieramodels

./: README.md
examples/: Dockerfile  README.md
examples/GPS/: .gitignore  gui.sh  pom.xml  run.sh
examples/GPS/GPS_Watch/: .classpath  .project  pom.xml
examples/GPS/GPS_Watch/models/GPS_Watch/: GPS_Watch.xtuml  GPS_Watch.xtumlg
examples/GPS/GPS_Watch/models/GPS_Watch/GPS_Watch/: GPS_Watch.xtuml  GPS_Watch.xtumlg
examples/GPS/GPS_Watch/src/main/java/: module-info.java
examples/GPS/GPS_Watch/src/main/java/gps_watch/: GPS_Watch.java  UI.java
examples/GPS/GPS_Watch/src/main/java/gui/: ApplicationConnection.java  AsciiWatchGui.java  Gui.java  SwingWatchGui.java
examples/GPS/HeartRateMonitor/: .project  pom.xml
examples/GPS/HeartRateMonitor/models/HeartRateMonitor/: HeartRateMonitor.xtuml  HeartRateMonitor.xtumlg
examples/GPS/HeartRateMonitor/models/HeartRateMonitor/HeartRateMonitor/: HeartRateMonitor.xtuml  HeartRateMonitor.xtumlg
examples/GPS/HeartRateMonitor/models/HeartRateMonitor/HeartRateMonitor/HeartRateMonitor/: HeartRateMonitor.xtuml  HeartRateMonitor.xtumlg
examples/GPS/HeartRateMonitor/models/HeartRateMonitor/HeartRateMonitor/Shared/: Shared.xtuml  Shared.xtumlg
examples/GPS/Location/: .classpath  .project  pom.xml
examples/GPS/Location/models/Location/: Location.xtuml  Location.xtumlg
examples/GPS/Location/models/Location/Location/: Location.xtuml  Location.xtumlg
examples/GPS/Location/models/Location/Location/Location/: Location.xtuml  Location.xtumlg
examples/GPS/Location/models/Location/Location/Shared/: Shared.xtuml  Shared.xtumlg
examples/GPS/Tracking/: .classpath  .project  pom.xml
examples/GPS/Tracking/models/Tracking/: Tracking.xtuml  Tracking.xtumlg
examples/GPS/Tracking/models/Tracking/Tracking/: Tracking.xtuml  Tracking.xtumlg
examples/GPS/Tracking/models/Tracking/Tracking/Shared/: Shared.xtuml  Shared.xtumlg
examples/GPS/Tracking/models/Tracking/Tracking/Tracking/: Tracking.xtuml  Tracking.xtumlg
examples/GPS/UI/: .classpath  .project  pom.xml
examples/GPS/UI/models/UI/: UI.xtuml  UI.xtumlg
examples/GPS/UI/models/UI/UI/: UI.xtuml  UI.xtumlg
examples/GPS/UI/models/UI/UI/Shared/: Shared.xtuml  Shared.xtumlg
examples/GPS/UI/models/UI/UI/UI/: UI.xtuml  UI.xtumlg
examples/GPS/UI/src/main/java/: module-info.java
examples/GPS/UI/src/main/java/gui/: ApplicationConnection.java  AsciiWatchGui.java  Gui.java  SwingWatchGui.java  WatchGui.java
examples/HelloWorld/: .gitignore  CMakeLists.txt  build-masl.sh  compile-masl.sh  docker-compose.yml  pom.xml  run.sh  test.sch
examples/HelloWorld/HelloWorld_OOA/: pom.xml
examples/HelloWorld/HelloWorld_OOA/src/main/masl/HelloWorld_OOA/: HelloWorld.int  HelloWorld.mod  RESULT_result.tr  add_five.svc  multiply_by_two.svc  testcase1.scn
examples/HelloWorld/HelloWorld_proc/: pom.xml
examples/HelloWorld/HelloWorld_proc/src/main/masl/: HelloWorld_Result_result.tr  HelloWorld_proc.prj  Result.int
examples/HelloWorld/_build/: CMakeLists.txt
examples/HelloWorld/_build/src/HelloWorld/: CMakeLists.txt
examples/HelloWorld/_build/src/HelloWorld/src/: Kafka__HelloWorld.cc
examples/HelloWorld/_build/src/Result/: CMakeLists.txt
examples/HelloWorld/_build/src/Result/src/: Kafka__Result.cc  Kafka__Result__result.cc
examples/HelloWorld/cpp-gen/: CMakeLists.txt  build-masl.sh
examples/MicrowaveOven/: .classpath  .project  pom.xml  run.sh
examples/SIS/: .dependencies  .gitignore  .project  pom.xml  run.sh
examples/SIS/SIS_OOA/: .project  pom.xml
examples/SIS/SIS_OOA/src/main/java/: module-info.java
examples/SIS/SIS_proc/: .project  pom.xml
examples/SIS/dependencies/: CSV.int  Logger.int  STRING.int  UTIL.int
examples/SIS/models/SIS/: SIS.xtuml
examples/SIS/models/SIS/deployments/: deployments.xtuml
examples/SIS/models/SIS/domains/: domains.xtuml
examples/SIS/models/SIS/domains/AccessControl/: AccessControl.xtuml
examples/SIS/models/SIS/domains/SIS/: SIS.xtuml
examples/SIS/models/SIS/types/: types.xtuml
examples/calculator/: .gitignore  CMakeLists.txt  README.md  build-masl.sh  compile-masl.sh  docker-compose.yml  pom.xml  run.sh  test.sch
examples/calculator/ALU/: pom.xml  run.sh
examples/calculator/ALU/cpp-gen/: CMakeLists.txt  build-masl.sh
examples/calculator/ALU/masl/ALU/: ALU.mod
examples/calculator/ALU_OOA/: ALU.mod  pom.xml
examples/calculator/Display_OOA/: Display.mod  error.svc  pom.xml  result.svc
examples/calculator/_build/src/ALU/: CMakeLists.txt
examples/calculator/_build/src/ALU/src/: Kafka__ALU.cc
examples/calculator/_build/src/Display/: CMakeLists.txt
examples/calculator/_build/src/Display/src/: Kafka__Display.cc  Kafka__Display__error.cc  Kafka__Display__result.cc
examples/calculator/calculator_proc/: ALU_disp_error.tr  ALU_disp_result.tr  calculator.prj  pom.xml
test/IntegrityCheckTest/: CMakeLists.txt  build-masl.sh  pom.xml  run.sh  test.sch  test_all.sh
test/IntegrityCheckTest/CMD_OOA/: CMD.int  CMD.mod  get_value.svc  read_command_line.svc  register_value.svc
test/IntegrityCheckTest/IntegrityTest/: IntegrityTest.prj  custom.cmake  pom.xml
test/IntegrityCheckTest/Integrity_OOA/: Element_print.svc  Integrity.int  Integrity.mod  List_print.svc  init.scn  pom.xml  run_test.scn  test01_base_test.scn  test02_duplicate_id.scn  test03_link_exists_one1.scn  test04_link_exists_one2.scn  test05_link_exists_many.scn  test06_unlink_no_link_one1.scn  test07_unlink_no_link_one2.scn  test08_unlink_no_link_many.scn  test09_inconsistent_refs.scn  test10_delete.scn
test/IntegrityCheckTest/STRING_OOA/: STRING.int  STRING.mod  atoi.svc
test/tool-core-masl-test/: README.md  pom.xml  run.sh  test_all.sh
test/tool-core-masl-test/masl/EEs/: A.int  TRACE.int
test/tool-core-masl-test/masl/ModFiles/: Model1.mod
test/tool-core-masl-test/masl/tests/001_variable_declaration/: SingleService.mod  TRACE.int  init.svc
test/tool-core-masl-test/masl/tests/test1/: A.int  init.svc
test/tool-core-masl-test/masl/tests/test2/: init.svc
test/tool-core-masl-test/masl/tests/test3/: Model1.mod  init.svc  second.al
(+104 files in other folders)
